--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <title>Las 3 Grandes Vueltas</title>
 </head>
-<body>
+<body class="container">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -136,11 +136,11 @@
         <!-- Esto quedará para proximas ediciones -->
     </section>
 </main>
-    <footer class="d-flex justify-content-evenly">
+    <footer class="container d-flex justify-content-evenly">
         <div class="sponsors d-flex justify-content-start">
             <h3 class="text-center">Auspiciadores</h3>
             <img src="images/Shimano.svg" class="img-thumbnail" alt="Shimano Logo">
-            <img src="images/santini_logo.jpg" class="img-thumbnail" alt="Santini Logo">
+            <img src="images/santini logo.png" class="img-thumbnail" alt="Santini Logo">
             <img src="images/Tissot_Logo.svg" class="img-thumbnail" alt="Tissot Logo">
         </div>
         
