--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         </div>
     </nav>
-
+    <!-- CARUSEL PRINCIPAL -->
     <section class="container">
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -77,8 +77,9 @@
     </section>
     <main>
     <section class="container ">
+        <!-- TEXTO PRINCIPAL -->
         <p class="text-center my-5 texto-main">Sumérgete en el emocionante mundo del <strong>ciclismo</strong> de ruta a través de las <em>Tres Grandes Vueltas</em> : el Tour de Francia, el Giro de Italia y la Vuelta a España. Estas competiciones legendarias representan la cúspide del ciclismo internacional, uniendo a los ciclistas más valientes y a los terrenos más desafiantes en una danza épica de habilidad, resistencia y determinación.</p>
-        
+        <!-- CARDS LOGOS GRANDES VUELTAS -->
         <div class="container-cards">
             <div data-aos="flip-left">
                 <div class="card" style="width: 18rem;">
@@ -109,6 +110,7 @@
         </div>
     </section>
 
+    <!-- GANADORES DEL AÑO 2023 - FELICIDADES AL TEAM JUMBO-VISMA! -->
     <section class="container my-5">
         <div class="winners">
             <div data-aos="zoom-in">
@@ -128,14 +130,9 @@
             </div>
 
         </div>
-        <!-- <div id="nombres-ganadores" class="nombres-winners d-flex justify-content-evenly my-3">
-            <p class="primoz-winner">Primoz Roglic</p>
-            <p class="jonas-winner">Jonas Vingegaard</p>
-            <p class="sepp-winner">Sepp Kuss</p>
-        </div> -->
-        <!-- Esto quedará para proximas ediciones -->
     </section>
 </main>
+
     <footer class="container d-flex justify-content-evenly">
         <div class="sponsors d-flex justify-content-start">
             <h3 class="text-center">Auspiciadores</h3>
