--- a/pages/ganadores.html
+++ b/pages/ganadores.html
@@ -50,7 +50,9 @@
         </div>
         </div>
     </nav>
-
+    <section>
+        <h1 class="text-center">Ganadores ediciones 2023</h1>
+    </section>
     <section class="container my-5">
         <h3 class="title-carrera" id="g1">Giro de Italia</h3>
         <p>Clasificacion General</p>
