--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Galeria</title>
 </head>
-<body>
+<body class="container">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
