--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/styles.css">
     <title>Nosotros</title>
 </head>
-<body>
+<body class="container">
     <nav class="navbar navbar-expand-lg ">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -51,7 +51,7 @@
         </div>
     </nav>
 
-        <h1>Nosotros</h1>
+        <h1 class="text-center">Nosotros</h1>
         <p class="uci-text">La Unión Ciclista Internacional (UCI) (en francés: Union Cycliste Internationale) es la asociación de federaciones nacionales de ciclismo. Fue creada el 14 de abril de 1900 en París, integrando inicialmente a las federaciones de Francia, Bélgica, Italia, Suiza y Estados Unidos de América, siendo su primer presidente el belga Emile de Beukelaer.</p>
 
     <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -74,12 +74,14 @@
                 <label for="comentario">Déjanos tu comentario</label>
                 <textarea class="form-control" id="comentario" name="comments" rows="10" required></textarea>
             </div>
-            <label for="enviar">
-                <button type="submit" id="enviar" class="btn btn-primary">Enviar</button>
-            </label>
-            <label for="reset">
-                <button type="reset" id="reset" class="btn btn-primary">Limpiar</button>
-            </label>
+            <div class="botones">
+                <label for="enviar">
+                    <button type="submit" id="enviar" class="btn btn-primary">Enviar</button>
+                </label>
+                <label for="reset">
+                    <button type="reset" id="reset" class="btn btn-primary">Limpiar</button>
+                </label>
+            </div>
         </form>
     </div>
 
